kubernetes/office/00-00-namespace-office.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: office
  name: office
