kubernetes/office/namespace-office.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: office
  labels:
    name: office
