kubernetes/office/01-01-deployment-confluence.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: confluence
  namespace: office
  labels:
    k8s-app: congluence
    namespace: office
spec:
  replicas: 1
  selector:
    matchLabels:
      app: confluence
  template:
    metadata:
      labels:
        app: confluence
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - name: confluence
          image: atlassian/confluence-server
          ports:
            - containerPort: 8090
            - containerPort: 8091
          volumeMounts:
            - name: confluence-data
              mountPath: /var/atlassian/application-data/confluence
      volumes:
        - name: confluence-data
          cephfs:
            monitors:
              - 192.168.10.1:6789
              - 192.168.10.6:6789
              - 192.168.10.11:6789
            user: admin
            secretRef:
              name: ceph-secret
            path: "/office/confluence"
