kubernetes/office/05-00-deployment-confluence.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    k8s-app: confluence
    namespace: office
  name: confluence
  namespace: office
spec:
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: confluence
      namespace: office
      name: confluence
    spec:
      containers:
        - name: confluence
          image: atlassian/confluence-server
          ports:
            - containerPort: 8090
              protocol: TCP
            - containerPort: 8091
              protocol: TCP
          volumeMounts:
            - name: confluence-data
              mountPath: /var/atlassian/application-data/confluence
      nodeSelector:
        app: confluence
      volumes:
        - name: confluence-data
          cephfs:
            monitors:
              - 192.168.10.1:6789
              - 192.168.10.6:6789
              - 192.168.10.11:6789
            user: admin
            secretRef:
              name: ceph-secret
            path: "/office/confluence"
