kubernetes/office/06-00-service-confluence-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: confluence
  name: confluence-service
  namespace: office
spec:
  clusterIP: None
  ports:
  - name: confluence
    port: 8090
    protocol: TCP
    targetPort: 8090
  selector:
    k8s-app: confluence
